--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,8 +29,8 @@ dependencies {
     //compile 'com.google.android.gms:play-services-location:11.0.4'
 
 
-    compile 'com.android.support:design:26.0.2'
-    compile 'com.android.support:appcompat-v7:26.0.+'
+    compile 'com.android.support:design:27.1.0'
+    compile 'com.android.support:appcompat-v7:26.0.2'
     compile 'de.hdodenhof:circleimageview:1.2.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.github.lovetuzitong:MultiImageSelector:1.2'
